work-sites added

--- a/frontend/weekly-schedule.html
+++ b/frontend/weekly-schedule.html
@@ -199,9 +199,9 @@
                 </tr>
                 <tr><td class="separator-thin" colspan="6"></td></tr>
                 <tr>
-                    <td class="work-site">Fundación RNM TAC Largo</td>
+                    <td class="work-site">Fundación RNM TAC Matutino</td>
                     <td class="droppable"><select disabled></select></td>
-                    <td class="droppable"><select></select></td>
+                    <td class="droppable"><select disabled></select></td>
                     <td class="droppable"><select disabled></select></td>
                     <td class="droppable"><select disabled></select></td>
                     <td class="droppable"><select disabled></select></td>
@@ -214,6 +214,15 @@
                     <td class="droppable"><select></select></td>
                     <td class="droppable"><select disabled></select></td>
                 </tr>
+                <tr>
+                    <td class="work-site">Fundación RNM TAC Largo</td>
+                    <td class="droppable"><select disabled></select></td>
+                    <td class="droppable"><select></select></td>
+                    <td class="droppable"><select disabled></select></td>
+                    <td class="droppable"><select disabled></select></td>
+                    <td class="droppable"><select disabled></select></td>
+                </tr>
+                
                 <tr><td class="separator-thick" colspan="6"></td></tr>
                 <tr>
                     <td class="work-site">CMAC Q1 Matutino</td>
@@ -222,6 +231,14 @@
                     <td class="droppable"><select></select></td>
                     <td class="droppable"><select></select></td>
                     <td class="droppable"><select></select></td>
+                </tr>
+                <tr>
+                    <td class="work-site">CMAC Q1 Vespertino</td>
+                    <td class="droppable"><select disabled></select></td>
+                    <td class="droppable"><select disabled></select></td>
+                    <td class="droppable"><select disabled></select></td>
+                    <td class="droppable"><select disabled></select></td>
+                    <td class="droppable"><select disabled></select></td>
                 </tr>
                 <tr>
                     <td class="work-site">CMAC Q1 Largo</td>
@@ -241,6 +258,14 @@
                     <td class="droppable"><select></select></td>
                 </tr>
                 <tr>
+                    <td class="work-site">CMAC Q2 Vespertino</td>
+                    <td class="droppable"><select disabled></select></td>
+                    <td class="droppable"><select disabled></select></td>
+                    <td class="droppable"><select disabled></select></td>
+                    <td class="droppable"><select disabled></select></td>
+                    <td class="droppable"><select disabled></select></td>
+                </tr>
+                <tr>
                     <td class="work-site">CMAC Q2 Largo</td>
                     <td class="droppable"><select disabled></select></td>
                     <td class="droppable"><select disabled></select></td>
@@ -258,6 +283,14 @@
                     <td class="droppable"><select disabled></select></td>
                 </tr>
                 <tr>
+                    <td class="work-site">CMAC Endoscopia Vespertino</td>
+                    <td class="droppable"><select disabled></select></td>
+                    <td class="droppable"><select isabled></select></td>
+                    <td class="droppable"><select disabled></select></td>
+                    <td class="droppable"><select disabled></select></td>
+                    <td class="droppable"><select disabled></select></td>
+                </tr>
+                <tr>
                     <td class="work-site">CMAC Endoscopia Largo</td>
                     <td class="droppable"><select></select></td>
                     <td class="droppable"><select disabled></select></td>
@@ -267,27 +300,18 @@
                 </tr>
                 <tr><td class="separator-thick" colspan="6"></td></tr>
                 <tr>
-                    <td class="work-site">Hospital Cipolletti Vespertino</td>
-                    <td class="droppable"><select disabled></select></td>
-                    <td class="droppable"><select disabled></select></td>
-                    <td class="droppable"><select disabled></select></td>
-                    <td class="droppable"><select disabled></select></td>
-                    <td class="droppable"><select disabled></select></td>
-                </tr>
-                <tr>
-                    <td class="work-site">Hospital Allen Largo</td>
-                    <td class="droppable"><select disabled></select></td>
-                    <td class="droppable"><select></select></td>
-                    <td class="droppable"><select disabled></select></td>
-                    <td class="droppable"><select></select></td>
-                    <td class="droppable"><select disabled></select></td>
-                </tr>
-                <tr><td class="separator-thick" colspan="6"></td></tr>
-                <tr>
                     <td class="work-site">Imágenes Hemo Matutino</td>
                     <td class="droppable"><select></select></td>
                     <td class="droppable"><select disabled></select></td>
                     <td class="droppable"><select></select></td>
+                    <td class="droppable"><select disabled></select></td>
+                    <td class="droppable"><select disabled></select></td>
+                </tr>
+                <tr>
+                    <td class="work-site">Imágenes Hemo Vespertino</td>
+                    <td class="droppable"><select disabled></select></td>
+                    <td class="droppable"><select disabled></select></td>
+                    <td class="droppable"><select disabled></select></td>
                     <td class="droppable"><select disabled></select></td>
                     <td class="droppable"><select disabled></select></td>
                 </tr>
@@ -359,6 +383,14 @@
                     <td class="droppable"><select></select></td>
                 </tr>
                 <tr>
+                    <td class="work-site">Imágenes 4to piso Vespertino</td>
+                    <td class="droppable"><select disabled></select></td>
+                    <td class="droppable"><select disabled></select></td>
+                    <td class="droppable"><select disabled></select></td>
+                    <td class="droppable"><select disabled></select></td>
+                    <td class="droppable"><select disabled></select></td>
+                </tr>
+                <tr>
                     <td class="work-site">Imágenes 4to piso Largo</td>
                     <td class="droppable"><select></select></td>
                     <td class="droppable"><select></select></td>
@@ -389,6 +421,39 @@
                     <td class="droppable"><select></select></td>
                     <td class="droppable"><select disabled></select></td>
                     <td class="droppable"><select disabled></select></td>
+                    <td class="droppable"><select disabled></select></td>
+                </tr>
+                <tr><td class="separator-thick" colspan="6"></td></tr>
+                <tr>
+                    <td class="work-site">Hospital Cipolletti Matutino</td>
+                    <td class="droppable"><select disabled></select></td>
+                    <td class="droppable"><select disabled></select></td>
+                    <td class="droppable"><select disabled></select></td>
+                    <td class="droppable"><select disabled></select></td>
+                    <td class="droppable"><select disabled></select></td>
+                </tr>
+                <tr>
+                    <td class="work-site">Hospital Cipolletti Vespertino</td>
+                    <td class="droppable"><select disabled></select></td>
+                    <td class="droppable"><select disabled></select></td>
+                    <td class="droppable"><select disabled></select></td>
+                    <td class="droppable"><select disabled></select></td>
+                    <td class="droppable"><select disabled></select></td>
+                </tr>
+                <tr>
+                    <td class="work-site">Hospital Cipolletti Largo</td>
+                    <td class="droppable"><select disabled></select></td>
+                    <td class="droppable"><select disabled></select></td>
+                    <td class="droppable"><select disabled></select></td>
+                    <td class="droppable"><select disabled></select></td>
+                    <td class="droppable"><select disabled></select></td>
+                </tr>
+                <tr>
+                    <td class="work-site">Hospital Allen Largo</td>
+                    <td class="droppable"><select disabled></select></td>
+                    <td class="droppable"><select></select></td>
+                    <td class="droppable"><select disabled></select></td>
+                    <td class="droppable"><select></select></td>
                     <td class="droppable"><select disabled></select></td>
                 </tr>
                 <tr><td class="separator-thick" colspan="6"></td></tr>
@@ -426,6 +491,14 @@
                 </tr>
                 <tr>
                     <td class="work-site">Hospital Centenario Matutino</td>
+                    <td class="droppable"><select disabled></select></td>
+                    <td class="droppable"><select disabled></select></td>
+                    <td class="droppable"><select disabled></select></td>
+                    <td class="droppable"><select disabled></select></td>
+                    <td class="droppable"><select disabled></select></td>
+                </tr>
+                <tr>
+                    <td class="work-site">Hospital Centenario Vespertino</td>
                     <td class="droppable"><select disabled></select></td>
                     <td class="droppable"><select disabled></select></td>
                     <td class="droppable"><select disabled></select></td>
