--- a/frontend/weekly-schedule-image.html
+++ b/frontend/weekly-schedule-image.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="css/weekly-schedule.css">
     <link rel="stylesheet" href="css/header.css">
     <link rel="stylesheet" href="css/spinner.css">
+    <link rel="stylesheet" href="css/media.css">
     <script src="js/spinner.js"></script>
 </head>
 <body>
