--- a/frontend/weekly-schedule.html
+++ b/frontend/weekly-schedule.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="css/weekly-schedule.css">
     <link rel="stylesheet" href="css/header.css">
     <link rel="stylesheet" href="css/spinner.css">
+    <link rel="stylesheet" href="css/media.css">
     <script type="module" defer src="js/weekly-schedule.js"></script>
     <script type="module" src="js/printSchedule.js"></script>
     <script src="js/spinner.js"></script>
