Castro Rendon Mat y Vesp

--- a/frontend/current-weekly-schedule.html
+++ b/frontend/current-weekly-schedule.html
@@ -518,6 +518,22 @@
                             <td class="droppable"><select disabled></select></td>
                         </tr>
                         <tr>
+                            <td class="work-site">Hospital Castro Rendon Matutino</td>
+                            <td class="droppable"><select disabled></select></td>
+                            <td class="droppable"><select disabled></select></td>
+                            <td class="droppable"><select disabled></select></td>
+                            <td class="droppable"><select disabled></select></td>
+                            <td class="droppable"><select disabled></select></td>
+                        </tr>
+                        <tr>
+                            <td class="work-site">Hospital Castro Rendon Vespertino</td>
+                            <td class="droppable"><select disabled></select></td>
+                            <td class="droppable"><select disabled></select></td>
+                            <td class="droppable"><select disabled></select></td>
+                            <td class="droppable"><select disabled></select></td>
+                            <td class="droppable"><select disabled></select></td>
+                        </tr>
+                        <tr>
                             <td class="work-site">Hospital Castro Rendon Largo</td>
                             <td class="droppable"><select disabled></select></td>
                             <td class="droppable"><select disabled></select></td>
@@ -527,8 +543,8 @@
                         </tr>
                     </tbody>
                 </table> 
-            </div>
-        </main>
-    </body>
-    </html>
-    
+                </div>
+            </main>
+        </body>
+        </html>
+        
