--- a/frontend/weekly-schedule.html
+++ b/frontend/weekly-schedule.html
@@ -515,6 +515,22 @@
                     <td class="droppable"><select disabled></select></td>
                 </tr>
                 <tr>
+                    <td class="work-site">Hospital Castro Rendon Matutino</td>
+                    <td class="droppable"><select disabled></select></td>
+                    <td class="droppable"><select disabled></select></td>
+                    <td class="droppable"><select disabled></select></td>
+                    <td class="droppable"><select disabled></select></td>
+                    <td class="droppable"><select disabled></select></td>
+                </tr>
+                <tr>
+                    <td class="work-site">Hospital Castro Rendon Vespertino</td>
+                    <td class="droppable"><select disabled></select></td>
+                    <td class="droppable"><select disabled></select></td>
+                    <td class="droppable"><select disabled></select></td>
+                    <td class="droppable"><select disabled></select></td>
+                    <td class="droppable"><select disabled></select></td>
+                </tr>
+                <tr>
                     <td class="work-site">Hospital Castro Rendon Largo</td>
                     <td class="droppable"><select disabled></select></td>
                     <td class="droppable"><select disabled></select></td>
