Castro Rendon  Mat y Vesp

--- a/frontend/weekly-schedule.html
+++ b/frontend/weekly-schedule.html
@@ -534,7 +534,7 @@
                     <td class="work-site">Hospital Castro Rendon Largo</td>
                     <td class="droppable"><select disabled></select></td>
                     <td class="droppable"><select disabled></select></td>
-                    <td class="droppable"><select></select></td>
+                    <td class="droppable"><select disabled></select></td>
                     <td class="droppable"><select disabled></select></td>
                     <td class="droppable"><select disabled></select></td>
                 </tr>
