--- a/frontend/current-weekly-schedule.html
+++ b/frontend/current-weekly-schedule.html
@@ -537,7 +537,7 @@
                             <td class="work-site">Hospital Castro Rendon Largo</td>
                             <td class="droppable"><select disabled></select></td>
                             <td class="droppable"><select disabled></select></td>
-                            <td class="droppable"><select></select></td>
+                            <td class="droppable"><select disabled></select></td>
                             <td class="droppable"><select disabled></select></td>
                             <td class="droppable"><select disabled></select></td>
                         </tr>
