--- a/frontend/current-weekly-schedule.html
+++ b/frontend/current-weekly-schedule.html
@@ -11,6 +11,7 @@
     <script type="module" defer src="js/weekly-schedule.js"></script>
     <script type="module" src="js/printSchedule.js"></script>
     <script type="module" src="js/load-current-schedule.js"></script>
+    <script type="module" src="js/warnBeforeUnload.js"></script>
     <script src="js/spinner.js"></script>
 </head>
 <body>
