--- a/frontend/weekly-schedule.html
+++ b/frontend/weekly-schedule.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="css/media.css">
     <script type="module" defer src="js/weekly-schedule.js"></script>
     <script type="module" src="js/printSchedule.js"></script>
+    <script type="module" src="js/warnBeforeUnload.js"></script>
     <script src="js/spinner.js"></script>
 </head>
 <body>
