--- a/frontend/weekly-schedule.html
+++ b/frontend/weekly-schedule.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="css/weekly-schedule.css">
     <link rel="stylesheet" href="css/header.css">
     <link rel="stylesheet" href="css/spinner.css">
+    <link rel="stylesheet" href="css/tooltip.css">
     <link rel="stylesheet" href="css/media.css">
     <script type="module" defer src="js/weekly-schedule.js"></script>
     <script type="module" src="js/printSchedule.js"></script>
@@ -53,38 +54,38 @@
             <tbody>
                 <tr>
                     <td class="work-site"><span class="inform">Nro de lugares habilitados</span></td>
-                    <td id="monday-sites"></td>
-                    <td id="tuesday-sites"></td>
-                    <td id="wednesday-sites"></td>
-                    <td id="thursday-sites"></td>
-                    <td id="friday-sites"></td>
+                    <td><div class="tooltip-wrapper"><span id="monday-sites"></span></div></td>
+                    <td><div class="tooltip-wrapper"><span id="tuesday-sites"></span></div></td>
+                    <td><div class="tooltip-wrapper"><span id="wednesday-sites"></span></div></td>
+                    <td><div class="tooltip-wrapper"><span id="thursday-sites"></span></div></td>
+                    <td><div class="tooltip-wrapper"><span id="friday-sites"></span></div></td>
                 </tr>
                 <tr>
                     <td><span class="inform">Nro. de Anestesiólogos disponibles</span></td>
-                    <td><span id="monday-available"></span></td>
-                    <td><span id="tuesday-available"></span></td>
-                    <td><span id="wednesday-available"></span></td>
-                    <td><span id="thursday-available"></span></td>
-                    <td><span id="friday-available"></span></td>
+                    <td><div class="tooltip-wrapper"><span id="monday-available"></span></div></td>
+                    <td><div class="tooltip-wrapper"><span id="tuesday-available"></span></div></td>
+                    <td><div class="tooltip-wrapper"><span id="wednesday-available"></span></div></td>
+                    <td><div class="tooltip-wrapper"><span id="thursday-available"></span></div></td>
+                    <td><div class="tooltip-wrapper"><span id="friday-available"></span></div></td>
                 </tr>
                 <tr>
                     <td><span class="inform">Nro. de Anestesiólogos asignados</span></td>
-                    <td><span id="monday-assignments"></span></td>
-                    <td><span id="tuesday-assignments"></span></td>
-                    <td><span id="wednesday-assignments"></span></td>
-                    <td><span id="thursday-assignments"></span></td>
-                    <td><span id="friday-assignments"></span></td>
+                    <td><div class="tooltip-wrapper"><span id="monday-assignments"></span></div></td>
+                    <td><div class="tooltip-wrapper"><span id="tuesday-assignments"></span></div></td>
+                    <td><div class="tooltip-wrapper"><span id="wednesday-assignments"></span></div></td>
+                    <td><div class="tooltip-wrapper"><span id="thursday-assignments"></span></div></td>
+                    <td><div class="tooltip-wrapper"><span id="friday-assignments"></span></div></td>
                 </tr>
                 <tr>
                     <td><span class="inform">Anestesiólogos no asignados</span></td>
-                    <td><span id="monday-compare"></span></td>
-                    <td><span id="tuesday-compare"></span></td>
-                    <td><span id="wednesday-compare"></span></td>
-                    <td><span id="thursday-compare"></span></td>
-                    <td><span id="friday-compare"></span></td>
+                    <td><div class="tooltip-wrapper"><span id="monday-compare"></span></div></td>
+                    <td><div class="tooltip-wrapper"><span id="tuesday-compare"></span></div></td>
+                    <td><div class="tooltip-wrapper"><span id="wednesday-compare"></span></div></td>
+                    <td><div class="tooltip-wrapper"><span id="thursday-compare"></span></div></td>
+                    <td><div class="tooltip-wrapper"><span id="friday-compare"></span></div></td>
                 </tr>
             </tbody>
-        </table>
+            </table>            
         </div>
         <div class="schedule-assistant">
         <h3>Asistente propiamente dicho</h3>
