login verification improvement

--- a/frontend/admin.html
+++ b/frontend/admin.html
@@ -11,8 +11,9 @@
     <link rel="stylesheet" href="css/nav.css">
     <link rel="stylesheet" href="css/main.css">
     <link rel="stylesheet" href="css/spinner.css">
+    <script src="js/sessionManager.js"></script>
     <script defer src="js/admin.js"></script>
-    <script src="js/spinner.js"></script>
+    <script defer src="js/spinner.js"></script>
 </head>
 <body>
     <div class="spinner" id="spinner"></div>
