--- a/frontend/weekly-schedule.html
+++ b/frontend/weekly-schedule.html
@@ -9,10 +9,11 @@
     <link rel="stylesheet" href="css/spinner.css">
     <link rel="stylesheet" href="css/tooltip.css">
     <link rel="stylesheet" href="css/media.css">
-    <script type="module" defer src="js/weekly-schedule.js"></script>
-    <script type="module" src="js/printSchedule.js"></script>
-    <script type="module" src="js/warnBeforeUnload.js"></script>
+    <script src="js/sessionManager.js"></script>
     <script src="js/spinner.js"></script>
+    <script type="module" defer src="js/weekly-schedule.js"></script>
+    <script type="module" defer src="js/printSchedule.js"></script>
+    <script type="module" defer src="js/warnBeforeUnload.js"></script>
 </head>
 <body>
     <div class="spinner" id="spinner"></div>
