--- a/frontend/index.html
+++ b/frontend/index.html
@@ -12,8 +12,9 @@
     <link rel="stylesheet" href="css/spinner.css">
     <link rel="manifest" href="json/manifest.json">
     <meta name="theme-color" content="#0056b3">
+    <script src="js/sessionManager.js"></script>
+    <script src="js/spinner.js" defer></script>
     <script src="js/service-worker.js" defer></script>
-    <script src="js/pwa-install.js" defer></script>
     <script src="js/openfile.js" defer></script>
     <script src="js/meetings.js" defer></script>
     <script src="js/payments.js" defer></script>
@@ -21,11 +22,8 @@
     <script src="js/facturacion.js" defer></script>
     <script src="js/menu.js" defer></script>
     <script src="js/nav.js" defer></script>
-    <script src="js/auth.js"></script>
-    <script src="js/sessionTimeout.js"></script>
-    <script src="js/logout.js" defer></script>
     <script src="js/weekly-schedule-individualized.js" defer></script>
-    <script src="js/spinner.js"></script>
+    <script src="js/pwa-install.js" defer></script>
 </head>
 <body>
     <div class="spinner" id="spinner"></div>
