--- a/frontend/profile.html
+++ b/frontend/profile.html
@@ -9,10 +9,9 @@
     <link rel="stylesheet" href="css/login.css"> <!-- Usar login.css para estilos compartidos -->
     <link rel="stylesheet" href="css/media.css">
     <link rel="stylesheet" href="css/spinner.css">
+    <script src="js/sessionManager.js"></script>
     <script src="js/forms.js" defer></script>
-    <script defer src="js/auth.js"></script>
-    <script src="js/spinner.js"></script>
-    <script defer src="js/sessionTimeout.js"></script>
+    <script src="js/spinner.js"defer></script>
 </head>
 <body>
     <div class="spinner" id="spinner"></div>
