--- a/frontend/index.html
+++ b/frontend/index.html
@@ -24,7 +24,7 @@
     <script src="js/nav.js" defer></script>
     <script src="js/weekly-schedule-individualized.js" defer></script>
     <script src="js/pwa-install.js" defer></script>
-</head>
+    <script src="js/logout.js" defer></script>
 <body>
     <div class="spinner" id="spinner"></div>
     <header>
