manejo de cierre de sesión

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href="css/spinner.css">
     <link rel="manifest" href="json/manifest.json">
     <meta name="theme-color" content="#0056b3">
-    <script src="js/sessionManager.js"></script>
+    <script defer src="js/bundle.js"></script>
     <script src="js/spinner.js" defer></script>
     <script src="js/service-worker.js" defer></script>
     <script src="js/openfile.js" defer></script>
