--- a/frontend/weekly-schedule.html
+++ b/frontend/weekly-schedule.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="css/spinner.css">
     <link rel="stylesheet" href="css/tooltip.css">
     <link rel="stylesheet" href="css/media.css">
-    <script src="js/sessionManager.js"></script>
+    <script defer src="js/bundle.js"></script>
     <script src="js/spinner.js"></script>
     <script type="module" defer src="js/weekly-schedule.js"></script>
     <script type="module" defer src="js/printSchedule.js"></script>
