--- a/frontend/admin.html
+++ b/frontend/admin.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="css/nav.css">
     <link rel="stylesheet" href="css/main.css">
     <link rel="stylesheet" href="css/spinner.css">
-    <script src="js/sessionManager.js"></script>
+    <script defer src="js/bundle.js"></script>
     <script defer src="js/admin.js"></script>
     <script defer src="js/spinner.js"></script>
 </head>
