--- a/frontend/current-weekly-schedule.html
+++ b/frontend/current-weekly-schedule.html
@@ -9,8 +9,10 @@
     <link rel="stylesheet" href="css/spinner.css">
     <link rel="stylesheet" href="css/media.css">
     <link rel="stylesheet" href="css/tooltip.css">
-    <script src="js/sessionManager.js"></script>
     <script defer src="js/spinner.js"></script>
+    <script defer src="js/service-worker.js"></script>
+    <script defer src="js/bundle.js"></script>
+    <script defer src="js/notificationRequest.js"></script>
     <script type="module" defer src="js/load-current-schedule.js"></script>
     <script type="module" defer src="js/weekly-schedule.js"></script>
     <script type="module" defer src="js/printSchedule.js"></script>
