--- a/frontend/print-view.html
+++ b/frontend/print-view.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="css/weekly-schedule.css">
     <link rel="stylesheet" href="css/header.css">
     <link rel="stylesheet" href="css/spinner.css">
-    <script src="js/sessionManager.js"></script>
+    <script defer src="js/bundle.js"></script>
     <script defer src="js/spinner.js"></script>
     <script type="module" defer src="js/displaySummary.js"></script>
     <script defer src="https://cdnjs.cloudflare.com/ajax/libs/html2canvas/1.4.1/html2canvas.min.js"></script>
