--- a/frontend/index.html
+++ b/frontend/index.html
@@ -23,6 +23,7 @@
     <script src="js/nav.js" defer></script>
     <script src="js/weekly-schedule-individualized.js" defer></script>
     <script src="js/pwa-install.js" defer></script>
+    <script src="js/logout.js" defer></script
 <body>
     <div class="spinner" id="spinner"></div>
     <header>
