individualized schedule fix

--- a/frontend/weekly-schedule.html
+++ b/frontend/weekly-schedule.html
@@ -54,7 +54,7 @@
                 </thead>
                 <tbody>
                     <tr>
-                        <td class="work-site"><span class="inform">Nro de lugares habilitados</span></td>
+                        <td><span class="inform">Nro de lugares habilitados</span></td>
                         <td><div class="tooltip-wrapper"><span id="monday-sites"></span></div></td>
                         <td><div class="tooltip-wrapper"><span id="tuesday-sites"></span></div></td>
                         <td><div class="tooltip-wrapper"><span id="wednesday-sites"></span></div></td>
