several improvements in asignation

--- a/frontend/current-weekly-schedule.html
+++ b/frontend/current-weekly-schedule.html
@@ -37,8 +37,7 @@
                 <li>3. Si la cantidad de anestesiólogos excede a la cantidad de anestesiólogos por día:
                     cambie días días largos por días matutinos/vespertinos.</li>
                 <li>4. Asigne anestesiólogos para días individuales empleando los botones 🔄 al lado de las fechas.</li> 
-                <!-- <li>4. Asigne anestesiólogos:</li> -->
-                <button id="autoAssign-button" class="hidden">Asignar anestesiólogos</button>
+                <li>4. Asigne anestesiólogos para toda la semana:</li><button id="autoAssign-button">Asignar anestesiólogos</button>
                 <li>5. Imprima:<button id="print-schedule">Imprimir Programación</button></li>
             </ol>
         </div>
