weekly schedule and current-weekly schedule improvements

--- a/frontend/weekly-schedule.html
+++ b/frontend/weekly-schedule.html
@@ -30,13 +30,14 @@
         <div class="instructions">
             <h3>Pasos para generar programación</h3>
             <ol>
-                <li>1. Setee los sitios de trabajo de acuerdo a la programación de clínicas y hospitales.</li>
+                <li>1. Haga las modificaciones que necesite a la programación original.</li>
                 <li>2. Si la cantidad de lugares de trabajo excede a la cantidad de anestesiólogos por día:
                     cambie días vespertinos/matutinos por días largos.</li>
                 <li>3. Si la cantidad de anestesiólogos excede a la cantidad de anestesiólogos por día:
-                    cambie días largos por días matutinos/vespertinos.</li>
-                <li>4. Asigne anestesiólogos:<button id="autoAssign-button">Asignar anestesiólogos</button></li>
-                <li>5. Imprima:<button id="print-schedule">Imprimir Programación</button></li>
+                    cambie días días largos por días matutinos/vespertinos.</li>
+                <li>4. Puede asignar anestesiólogos para días individuales empleando los botones 🔄 al lado de las fechas.</li> 
+                <li>5. Puede asignar anestesiólogos para toda la semana:<button id="autoAssign-button">Asignar anestesiólogos</button></li>
+                <li>6. Imprima:<button id="print-schedule">Imprimir Programación</button></li>
             </ol>
         </div>
         <div id="availability-container" class="instructions">
