--- a/frontend/current-weekly-schedule.html
+++ b/frontend/current-weekly-schedule.html
@@ -36,9 +36,9 @@
                     cambie días vespertinos/matutinos por días largos.</li>
                 <li>3. Si la cantidad de anestesiólogos excede a la cantidad de anestesiólogos por día:
                     cambie días días largos por días matutinos/vespertinos.</li>
-                <li>4. Asigne anestesiólogos para días individuales empleando los botones 🔄 al lado de las fechas.</li> 
-                <li>4. Asigne anestesiólogos para toda la semana:</li><button id="autoAssign-button">Asignar anestesiólogos</button>
-                <li>5. Imprima:<button id="print-schedule">Imprimir Programación</button></li>
+                <li>4. Puede asignar anestesiólogos para días individuales empleando los botones 🔄 al lado de las fechas.</li> 
+                <li>5. Puede asignar anestesiólogos para toda la semana:<button id="autoAssign-button">Asignar anestesiólogos</button></li>
+                <li>6. Imprima:<button id="print-schedule">Imprimir Programación</button></li>
             </ol>
         </div>
         <div id="availability-container" class="instructions">
