Degreef CR assignment

--- a/frontend/current-weekly-schedule.html
+++ b/frontend/current-weekly-schedule.html
@@ -539,7 +539,7 @@
                         <td class="work-site">Hospital Castro Rendon Largo</td>
                         <td class="droppable"><select id="hospital-castro-rendon-monday-long" disabled></select></td>
                         <td class="droppable"><select id="hospital-castro-rendon-tuesday-long" disabled></select></td>
-                        <td class="droppable"><select id="hospital-castro-rendon-wednesday-long" disabled></select></td>
+                        <td class="droppable"><select id="hospital-castro-rendon-wednesday-long"></select></td>
                         <td class="droppable"><select id="hospital-castro-rendon-thursday-long" disabled></select></td>
                         <td class="droppable"><select id="hospital-castro-rendon-friday-long" disabled></select></td>
                     </tr>
