username added to timestamp in both summary and individualized schedule, admin access added to hamburguer menu, admin select sort by alfabetic orden, management of vacation list extension and adds

--- a/frontend/admin.html
+++ b/frontend/admin.html
@@ -21,6 +21,9 @@
         <a href="index.html" class="app-logo-link">
             <img src="images/logo/logo.png" alt="Logo Anestesiólogos del Valle" class="app-logo">
         </a>
+        <a href="index.html" class="back-to-main-menu" title="Volver al menú principal">
+            <img src="images/icons/back-icon.svg" alt="Volver" class="back-icon">
+        </a>
         <h1>Administrar Usuarios</h1>
     </header>
     <main class="form-container">
