--- a/frontend/index.html
+++ b/frontend/index.html
@@ -35,7 +35,9 @@
         </div>
         <div class="dropdown-menu" id="dropdown-menu">
             <a href="profile.html">Mi perfil</a>
+            <a href="admin.html">Administrador de perfiles</a>
             <a href="login.html" id="logout">Cerrar sesión</a>
+
         </div>
     </header>
     <nav>
